@startuml

skinparam classAttributeIconSize 0

class SampleUI {
+TestCodeSelection(testList)
+setSampleNumber()
}

class SampleController {
+getTestList()
+setTestCode(testCode)
+setSampleNumber(n)
+createSampleList(n)
}

interface ExternalModuleBarcode {
+BufferedImage barcodeGenerator(String barcodeText)
+saveBarcode(BufferedImage barcodeJPG, String barcodeText)
}

class ExternalModuleBarcodeAdapter {
+barcodeGenerator(barcodeText)
+saveBarcode(barcodeJPG, barcodeText)
}

class Barbecue {
+Barcode createUPCA(java.lang.String data)
}

class Company {
+getTestStore()
}


class TestMapper {
+toDTOList()
}

class TestDTO {
}

class Sample {
-barcodeText
+generateBarcodeUPC()
}

class SampleList {
+saveSample(sample);
}

class TestStore {
+getRegisteredTests()
+getTestByCode(testCode)
}

class Test {
-sampleList
+setSampleList(sampleList)
}

SampleUI ..> SampleController
ExternalModuleBarcode <|.. ExternalModuleBarcodeAdapter
ExternalModuleBarcodeAdapter --> Barbecue
SampleController ..> Company
SampleController .> TestMapper
TestMapper .> TestDTO
SampleController ..> Sample
SampleController ..> ExternalModuleBarcode
SampleController ..> SampleList
SampleController ...> Test
Company "1"-->"1 " TestStore : uses >
Test " 1   "-->"*" Sample : collects >

TestStore "        1"->"  *     " Test : contains >
Sample " *   "<-"   1" SampleList : contains >
Test "1"->"1   " SampleList : uses >
SampleUI ..> TestDTO

@enduml